--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
 <resources>
-    <color name="primary">#3F0072</color>
+    <color name="primary">#4169E1</color>
     <color name="white">#FFF</color>
-    <color name="colorPrimary">#3F0072</color>
-    <color name="colorPrimaryDark">#3F0072</color>
-    <color name="colorAccent">#D2691E</color>
+    <color name="colorPrimary">#4169E1</color>
+    <color name="colorPrimaryDark">#4169E1</color>
+    <color name="colorAccent">#FFD700</color>
 </resources>
